Simplified data fitting. Improved gap in model to exclude spread from known cases and updated documentation. Added date markers for material events affecting likely growth rate. Based on AU data, flipping pre-lockdown growth rate of 25% per day to 9% per day after lockdown. Added real data for new cases per day.

--- a/covid19_modelling.ipynb
+++ b/covid19_modelling.ipynb
@@ -6,13 +6,13 @@
    "source": [
     "# Modelling COVID-19 community spread\n",
     "\n",
-    "This model for the spread of COVID-19 would actually apply in general to any homogenous population in a closed infection environment where transmission is internal within that population (i.e. no source of infection from arrival of external travellers). The growth rate is modelled as a proportion of the population who are contagious, which is less than the population who are infected since some infected people are still within the incubation period.\n",
+    "This model for the spread of COVID-19 would actually apply in general to any homogenous population in a closed infection environment where transmission is internal within that population (i.e. no source of infection from arrival of external travellers). The growth rate is modelled as a proportion of the population who are infected and contagious, which is less than the population who are infected since some infected people are still within the incubation period. The infected population is divided into known and unknown cases, with only the unknown proportion propagating the disease in the community. The known proportion is assumed to be isolating and therefore not transmitting.\n",
     "\n",
     "The model is not statistical in the sense of modelling random sampling and random events in the population. All such details are approximated by continuous differential equations as functions of time. Constant values are used for incubation time, detection time, duration of illness and death rate. In the practical example, such parameters are tuned to the Australian context where necessary, and otherwise reckoned from broad variety of sources (not yet well referenced).\n",
     "\n",
     "In the growth rate model, I include a scaling factor on the growth rate parameter that tapers the growth as the number of resolve cases approaches a certain population threshold. In the early growth phase, this scaling factor is essentially 1, so the model behaves like exponential growth. As the proportion of resolved cases becomes a significant proportion of the population, the growth rate will taper until the total number of infections (active + resolved) levels off at the assumed herd immunity level.\n",
     "\n",
-    "Mathematically speaking, we end up with a system of differential equations where derivatives of some variables depend on other variables at negative time delays. It is this feature that I believe is important in capturing the dynamics of the growth of the infection. The philosophy applied here is to model the true number of infections over time (even though in practice this is not known) and from that, derive observable quantities such as the known number of active infections over time.\n",
+    "Mathematically speaking, we end up with a system of differential equations where derivatives of some variables depend on other variables at negative time delays. It is this feature that I believe is important in capturing the dynamics of the growth of the infection. The philosophy applied here is to model the true number of infections over time (even though in practice this is not known) and from that, derive observable quantities such as the known number of active infections over time, which we can test against observable data.\n",
     "\n",
     "The growth rate parameter $\\alpha$ is a key input and is not derived from any first principles. Instead, this parameter is tuned to fit known data to date, and then either held constant or computed dynamically according to some assumed policy or behavioural model to try to forecast the resulting model variables. For example, if social distancing was imposed on a particular date, then $\\alpha$ could be reduced from that date onwards. Or $\\alpha$ could be made to depend on the number of known cases, modelling reaction of government to the daily situation. However the actual values of $\\alpha$ to use in such cases should be modelled on, or fitted to, actual data, so have limited predictive purpose. It is reasonable, however, to fit $\\alpha$ to known date up to now, then run the model forwards to project the outcomes of the growth rate remaining constant."
    ]
@@ -29,7 +29,7 @@
     "\n",
     "\\begin{align*}\n",
     "P(t) &= \\text{total population}, P(t \\le 0) = P_0 \\\\\n",
-    "N(t) &= \\text{number of actual actively infected}, N(t=0) = N_0 = 1, N(t < 0) = 0 \\\\\n",
+    "N(t) &= \\text{number of actual actively infected (both known and unknown)}, N(t=0) = N_0 = 1, N(t < 0) = 0 \\\\\n",
     "M(t) &= \\text{number of immune (vaccinated or recovered)}, M(t \\le 0) = M_0 = 0 \\\\\n",
     "D(t) &= \\text{number of deceased}, D(t \\le 0) = D_0 = 0 \\\\\n",
     "G(t) &= \\text{number of infected growth rate}, G(t \\le 0) = G_0 = 0 \\\\\n",
@@ -37,7 +37,7 @@
     "t &= \\text{time variable} \\\\\n",
     "\\alpha &= \\text{growth rate parameter} \\\\\n",
     "f &= \\text{fatality rate as a fraction of all (known and unknown) resolved cases} \\\\\n",
-    "s &= \\text{fraction of actively infected that become symptomatic} \\\\\n",
+    "s &= \\text{fraction of actively infected that become symptomatic}, 0 < s \\le 1 \\\\\n",
     "t_i &= \\text{mean incubation period, time from initial infection until becoming contagious} \\\\\n",
     "t_c &= \\text{symptom response and testing confirmation period} \\\\\n",
     "\\tau &= \\text{mean resolution period to recovery or mortality, after which case is no longer active} \\\\\n",
@@ -54,12 +54,12 @@
    "source": [
     "### Dynamic equations\n",
     "\n",
-    "The growth rate $G$ in simple exponential growth represents the rate of change in $N$ per unit time from new infections and is proportional to $N$ itself, i.e. it must look something like $\\frac{dN}{dt} = \\alpha N$. However this needs to be modified to account for two effects. Firstly, the growth rate is not proportional to $N$ at the present instant, rather proportional to the infected who are contagious, which is $N(t - t_i)$. Secondly, the growth rate needs to be tempered as the number of infected or previously infected approaches the herd immunity level. The modified growth rate is thereby formulated as\n",
+    "The growth rate $G$ in simple exponential growth represents the rate of change in $N$ per unit time from new infections and is proportional to $N$ itself, i.e. it must look something like $\\frac{dN}{dt} = \\alpha N$. However this needs to be modified to account for three effects. Firstly, the growth rate is not proportional to $N$ at the present instant, rather proportional to the infected who are contagious, which is $N(t - t_i)$. Secondly, the growth rate needs to be tempered as the number of infected or previously infected approaches the herd immunity level. Third, because the known cases $K$ are in self-isolation, they reduce the number of available actively infected that propagate to others, so that the growth rate is proportional to $N - K$ (assuming 100% compliance with self-isolation). The modified growth rate is thereby formulated as\n",
     "\n",
     "$$\n",
-    "G(t) = \\alpha \\left(1 - \\frac{N(t) + M(t)}{P(t)}\\right) N(t - t_i)\n",
+    "G(t) = \\alpha \\left(1 - \\frac{N(t) + M(t)}{P(t)}\\right) \\left( N(t - t_i) - K(t) \\right)\n",
     "$$\n",
-    "During the growth phase when $N \\ll P$ and $M \\ll P$, this formula behaves as $G(t) \\approx \\alpha N(t - t_i)$.\n",
+    "During the growth phase when $N \\ll P$ and $M \\ll P$, this formula behaves as $G(t) \\approx \\alpha \\left( N(t - t_i) - K(t) \\right)$.\n",
     "\n",
     "The rate of change of the number of actually infected, $N(t)$, is positively contributed by $G(t)$, but negatively contributed by cases passing the resolution period $\\tau$. The balance of the rate of change of actively infected is therefore\n",
     "\n",
@@ -135,7 +135,7 @@
     "Collecting the dynamic equations above, we have the following system to solve with time:\n",
     "\n",
     "\\begin{align*}\n",
-    "G(t) &= \\alpha \\left(1 - \\frac{N(t) + M(t)}{P(t)}\\right) N(t - t_i) \\\\\n",
+    "G(t) &= \\alpha \\left(1 - \\frac{N(t) + M(t)}{P(t)}\\right) \\left( N(t - t_i) - K(t) \\right) \\\\\n",
     "\\frac{dN}{dt} &= G(t) - G(t - \\tau) \\\\\n",
     "\\frac{dM}{dt} &= \\left(1 - f \\right) G(t - \\tau) \\\\\n",
     "\\frac{dD}{dt} &= f.G(t - \\tau) \\\\\n",
